--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toto",
+  "name": "react-echiquier",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
+    "clsx": "^2.0.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
